<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="net.slipp.counter.MainViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.count.toString()}"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:text="11" />

        <Button
            android:id="@+id/buttonUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.increment()}"
            android:text="Up"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/buttonDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.decrement()}"
            android:text="Down"
            tools:ignore="HardcodedText" />
    </LinearLayout>
</layout>
